manifests/istio/istio-operator/canary-demo/common/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
  labels:
    app: myapp
spec:
  selector:
    app: myapp
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
