manifests/istio/istio-operator/canary-demo/common/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: myapp-gw
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - myapp.example.com
    # tls:
    #   httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
      - myapp.example.com
    tls:
      mode: SIMPLE # enables HTTPS on this port
      credentialName: myapp-credential # fetches certs from Kubernetes secret
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp-vs
spec:
  hosts:
    - myapp.example.com
  gateways:
    - myapp-gw
  http:
  - route:
    - destination:
        host: myapp-svc
        subset: v1
        port:
          number: 80
      weight: 90
    - destination:
        host: myapp-svc
        subset: v2
        port:
          number: 80
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: myapp-dr
spec:
  host: myapp-svc
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
